// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeArtifactOptions GitHub OIDC auth provider release workflow should not contain aws secrets 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: release
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
      id-token: write
    outputs:
      latest_commit: \${{ steps.git_remote.outputs.latest_commit }}
      tag_exists: \${{ steps.check_tag_exists.outputs.exists }}
    env:
      CI: "true"
    steps:
      - name: Checkout
        uses: actions/checkout@v4
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name "github-actions"
          git config user.email "github-actions@github.com"
      - name: Configure AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          aws-region: us-east-2
          role-to-assume: stub-role-1
          role-duration-seconds: 900
      - name: AWS CodeArtifact Login
        run: npm run ca:login
      - name: Install dependencies
        run: npm ci
      - name: release
        run: npx projen release
      - name: Check if version has already been tagged
        id: check_tag_exists
        run: |-
          TAG=$(cat dist/releasetag.txt)
          ([ ! -z "$TAG" ] && git ls-remote -q --exit-code --tags origin $TAG && (echo "exists=true" >> $GITHUB_OUTPUT)) || (echo "exists=false" >> $GITHUB_OUTPUT)
          cat $GITHUB_OUTPUT
      - name: Check for new commits
        id: git_remote
        run: |-
          echo "latest_commit=$(git ls-remote origin -h \${{ github.ref }} | cut -f1)" >> $GITHUB_OUTPUT
          cat $GITHUB_OUTPUT
      - name: Backup artifact permissions
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: cd dist && getfacl -R . > permissions-backup.acl
        continue-on-error: true
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v4.4.0
        with:
          name: build-artifact
          path: dist
          overwrite: true
  release_github:
    name: Publish to GitHub Releases
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: needs.release.outputs.tag_exists != 'true' && needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: 18.x
      - name: Download build artifacts
        uses: actions/download-artifact@v4
        with:
          name: build-artifact
          path: dist
      - name: Restore build artifact permissions
        run: cd dist && setfacl --restore=permissions-backup.acl
        continue-on-error: true
      - name: Release
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
          GITHUB_REPOSITORY: \${{ github.repository }}
          GITHUB_REF: \${{ github.sha }}
        run: errout=$(mktemp); gh release create $(cat dist/releasetag.txt) -R $GITHUB_REPOSITORY -F dist/changelog.md -t $(cat dist/releasetag.txt) --target $GITHUB_REF 2> $errout && true; exitcode=$?; if [ $exitcode -ne 0 ] && ! grep -q "Release.tag_name already exists" $errout; then cat $errout; exit $exitcode; fi
  deploy:
    needs: release_github
    runs-on: ubuntu-latest
    permissions:
      contents: read
      deployments: read
      id-token: write
    environment:
      name: \${{ matrix.environment }}
    concurrency: \${{ matrix.environment }}-deploy
    steps:
      - name: Checkout
        uses: actions/checkout@v4
        with:
          ref: \${{ github.sha }}
          fetch-depth: 0
      - name: Configure AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          aws-region: us-east-2
          role-to-assume: stub-role-1
          role-duration-seconds: 900
      - name: AWS CodeArtifact Login
        run: npm run ca:login
      - name: Install dependencies
        run: npm ci
      - name: Configure AWS Credentials
        if: \${{ matrix.assumeRole == 'false' }}
        env:
          accessKeyId: \${{ secrets[matrix.accessKeyIdSecretName] }}
          secretAccessKey: \${{ secrets[matrix.secretAccessKeySecretName] }}
          region: \${{ matrix.region }}
        run: |-
          echo "AWS_ACCESS_KEY_ID=$accessKeyId" >> $GITHUB_ENV
          echo "AWS_SECRET_ACCESS_KEY=$secretAccessKey" >> $GITHUB_ENV
          echo "AWS_REGION=$region" >> $GITHUB_ENV
      - name: Assume AWS Role
        if: \${{ matrix.assumeRole == 'true' }}
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: \${{ matrix.roleToAssume }}
          aws-region: \${{ matrix.region }}
          role-duration-seconds: \${{ matrix.assumeRoleDurationSeconds }}
      - name: Pre Deployment
        if: \${{ matrix.hasPreDeployTask == 'true' }}
        run: npm run \${{ matrix.preDeploymentScript }}
      - name: Deployment
        run: npm run deploy:workflow
      - name: Post Deployment
        if: \${{ matrix.hasPostDeployTask == 'true' }}
        run: npm run \${{ matrix.postDeploymentScript }}
    strategy:
      max-parallel: 1
      matrix:
        include:
          - environment: dev1
            accessKeyIdSecretName: AWS_ACCESS_KEY_ID
            secretAccessKeySecretName: AWS_SECRET_ACCESS_KEY
            region: dev-aws-region-1
            assumeRole: "true"
            hasPostDeployTask: "false"
            postDeploymentScript: ""
            hasPreDeployTask: "false"
            preDeploymentScript: ""
            roleToAssume: stub-role-2
            assumeRoleDurationSeconds: 900
        environment:
          - dev1
"
`;

exports[`No stack pattern release workflow 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: release
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    outputs:
      latest_commit: \${{ steps.git_remote.outputs.latest_commit }}
      tag_exists: \${{ steps.check_tag_exists.outputs.exists }}
    env:
      CI: "true"
    steps:
      - name: Checkout
        uses: actions/checkout@v4
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name "github-actions"
          git config user.email "github-actions@github.com"
      - name: Setup Node.js
        uses: actions/setup-node@v4
        with:
          node-version: 14.18.1
      - name: Install dependencies
        run: npm ci
      - name: release
        run: npx projen release
      - name: Check if version has already been tagged
        id: check_tag_exists
        run: |-
          TAG=$(cat dist/releasetag.txt)
          ([ ! -z "$TAG" ] && git ls-remote -q --exit-code --tags origin $TAG && (echo "exists=true" >> $GITHUB_OUTPUT)) || (echo "exists=false" >> $GITHUB_OUTPUT)
          cat $GITHUB_OUTPUT
      - name: Check for new commits
        id: git_remote
        run: |-
          echo "latest_commit=$(git ls-remote origin -h \${{ github.ref }} | cut -f1)" >> $GITHUB_OUTPUT
          cat $GITHUB_OUTPUT
      - name: Backup artifact permissions
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: cd dist && getfacl -R . > permissions-backup.acl
        continue-on-error: true
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v4.4.0
        with:
          name: build-artifact
          path: dist
          overwrite: true
  release_github:
    name: Publish to GitHub Releases
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: needs.release.outputs.tag_exists != 'true' && needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: 14.18.1
      - name: Download build artifacts
        uses: actions/download-artifact@v4
        with:
          name: build-artifact
          path: dist
      - name: Restore build artifact permissions
        run: cd dist && setfacl --restore=permissions-backup.acl
        continue-on-error: true
      - name: Release
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
          GITHUB_REPOSITORY: \${{ github.repository }}
          GITHUB_REF: \${{ github.sha }}
        run: errout=$(mktemp); gh release create $(cat dist/releasetag.txt) -R $GITHUB_REPOSITORY -F dist/changelog.md -t $(cat dist/releasetag.txt) --target $GITHUB_REF 2> $errout && true; exitcode=$?; if [ $exitcode -ne 0 ] && ! grep -q "Release.tag_name already exists" $errout; then cat $errout; exit $exitcode; fi
  deploy:
    needs: release_github
    runs-on: ubuntu-latest
    permissions:
      contents: read
      deployments: read
    environment:
      name: \${{ matrix.environment }}
    concurrency: \${{ matrix.environment }}-deploy
    steps:
      - name: Checkout
        uses: actions/checkout@v4
        with:
          ref: \${{ github.sha }}
          fetch-depth: 0
      - name: Setup Node.js
        uses: actions/setup-node@v4
        with:
          node-version: 14.18.1
      - name: Install dependencies
        run: npm ci
      - name: Configure AWS Credentials
        if: \${{ matrix.assumeRole == 'false' }}
        env:
          accessKeyId: \${{ secrets[matrix.accessKeyIdSecretName] }}
          secretAccessKey: \${{ secrets[matrix.secretAccessKeySecretName] }}
          region: \${{ matrix.region }}
        run: |-
          echo "AWS_ACCESS_KEY_ID=$accessKeyId" >> $GITHUB_ENV
          echo "AWS_SECRET_ACCESS_KEY=$secretAccessKey" >> $GITHUB_ENV
          echo "AWS_REGION=$region" >> $GITHUB_ENV
      - name: Assume AWS Role
        if: \${{ matrix.assumeRole == 'true' }}
        uses: aws-actions/configure-aws-credentials@v4
        with:
          aws-access-key-id: \${{ secrets[matrix.accessKeyIdSecretName] }}
          aws-secret-access-key: \${{ secrets[matrix.secretAccessKeySecretName] }}
          role-to-assume: \${{ matrix.roleToAssume }}
          aws-region: \${{ matrix.region }}
          role-duration-seconds: \${{ matrix.assumeRoleDurationSeconds }}
      - name: Pre Deployment
        if: \${{ matrix.hasPreDeployTask == 'true' }}
        run: npm run \${{ matrix.preDeploymentScript }}
      - name: Deployment
        run: npm run deploy:workflow
      - name: Post Deployment
        if: \${{ matrix.hasPostDeployTask == 'true' }}
        run: npm run \${{ matrix.postDeploymentScript }}
    strategy:
      max-parallel: 1
      matrix:
        include:
          - environment: dev
            accessKeyIdSecretName: dev-secret-1
            secretAccessKeySecretName: dev-secret-2
            region: dev-aws-region-1
            assumeRole: "false"
            hasPostDeployTask: "false"
            postDeploymentScript: ""
            hasPreDeployTask: "false"
            preDeploymentScript: ""
          - environment: staging
            accessKeyIdSecretName: staging-secret-1
            secretAccessKeySecretName: staging-secret-2
            region: staging-aws-region-1
            assumeRole: "false"
            hasPostDeployTask: "false"
            postDeploymentScript: ""
            hasPreDeployTask: "false"
            preDeploymentScript: ""
        environment:
          - dev
          - staging
"
`;

exports[`a new task added for deployment in workflow tasks 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "env": {
    "PATH": "$(npx -c "node --print process.env.PATH")",
  },
  "tasks": {
    "build": {
      "description": "Full release build",
      "name": "build",
      "steps": [
        {
          "spawn": "default",
        },
        {
          "spawn": "pre-compile",
        },
        {
          "spawn": "compile",
        },
        {
          "spawn": "post-compile",
        },
        {
          "spawn": "test",
        },
        {
          "spawn": "package",
        },
      ],
    },
    "bump": {
      "condition": "git log --oneline -1 | grep -qv "chore(release):"",
      "description": "Bumps version based on latest git tag and generates a changelog entry",
      "env": {
        "BUMPFILE": "dist/version.txt",
        "BUMP_PACKAGE": "commit-and-tag-version@^12",
        "CHANGELOG": "dist/changelog.md",
        "OUTFILE": "package.json",
        "RELEASETAG": "dist/releasetag.txt",
        "RELEASE_TAG_PREFIX": "",
      },
      "name": "bump",
      "steps": [
        {
          "builtin": "release/bump-version",
        },
      ],
    },
    "bundle": {
      "description": "Prepare assets",
      "name": "bundle",
    },
    "clobber": {
      "condition": "git diff --exit-code > /dev/null",
      "description": "hard resets to HEAD of origin and cleans the local repo",
      "env": {
        "BRANCH": "$(git branch --show-current)",
      },
      "name": "clobber",
      "steps": [
        {
          "exec": "git checkout -b scratch",
          "name": "save current HEAD in "scratch" branch",
        },
        {
          "exec": "git checkout $BRANCH",
        },
        {
          "exec": "git fetch origin",
          "name": "fetch latest changes from origin",
        },
        {
          "exec": "git reset --hard origin/$BRANCH",
          "name": "hard reset to origin commit",
        },
        {
          "exec": "git clean -fdx",
          "name": "clean all untracked files",
        },
        {
          "say": "ready to rock! (unpushed commits are under the "scratch" branch)",
        },
      ],
    },
    "compile": {
      "description": "Only compile",
      "name": "compile",
    },
    "default": {
      "description": "Synthesize project files",
      "name": "default",
      "steps": [
        {
          "exec": "node .projenrc.js",
        },
      ],
    },
    "deploy": {
      "description": "Deploys your CDK app to the AWS cloud",
      "name": "deploy",
      "steps": [
        {
          "exec": "cdk deploy",
          "receiveArgs": true,
        },
      ],
    },
    "deploy:hotswap": {
      "name": "deploy:hotswap",
      "steps": [
        {
          "exec": "cdk deploy --method change-set --require-approval never --hotswap",
        },
      ],
    },
    "deploy:workflow": {
      "name": "deploy:workflow",
      "steps": [
        {
          "exec": "cdk deploy --method change-set --require-approval never",
        },
      ],
    },
    "destroy": {
      "description": "Destroys your cdk app in the AWS cloud",
      "name": "destroy",
      "steps": [
        {
          "exec": "cdk destroy",
          "receiveArgs": true,
        },
      ],
    },
    "diff": {
      "description": "Diffs the currently deployed app against your code",
      "name": "diff",
      "steps": [
        {
          "exec": "cdk diff",
        },
      ],
    },
    "eject": {
      "description": "Remove projen from the project",
      "env": {
        "PROJEN_EJECTING": "true",
      },
      "name": "eject",
      "steps": [
        {
          "spawn": "default",
        },
      ],
    },
    "eslint": {
      "description": "Runs eslint against the codebase",
      "name": "eslint",
      "steps": [
        {
          "exec": "eslint --ext .ts,.tsx --fix --no-error-on-unmatched-pattern $@ src test build-tools .projenrc.js",
          "receiveArgs": true,
        },
      ],
    },
    "install": {
      "description": "Install project dependencies and update lockfile (non-frozen)",
      "name": "install",
      "steps": [
        {
          "exec": "npm install",
        },
      ],
    },
    "install:ci": {
      "description": "Install project dependencies using frozen lockfile",
      "name": "install:ci",
      "steps": [
        {
          "exec": "npm ci",
        },
      ],
    },
    "package": {
      "description": "Creates the distribution package",
      "name": "package",
    },
    "post-compile": {
      "description": "Runs after successful compilation",
      "name": "post-compile",
      "steps": [
        {
          "spawn": "synth:silent",
        },
      ],
    },
    "post-upgrade": {
      "description": "Runs after upgrading dependencies",
      "name": "post-upgrade",
    },
    "pre-compile": {
      "description": "Prepare the project for compilation",
      "name": "pre-compile",
    },
    "release": {
      "description": "Prepare a release from "main" branch",
      "env": {
        "RELEASE": "true",
      },
      "name": "release",
      "steps": [
        {
          "exec": "rm -fr dist",
        },
        {
          "spawn": "bump",
        },
        {
          "spawn": "build",
        },
        {
          "spawn": "unbump",
        },
        {
          "exec": "git diff --ignore-space-at-eol --exit-code",
        },
      ],
    },
    "synth": {
      "description": "Synthesizes your cdk app into cdk.out",
      "name": "synth",
      "steps": [
        {
          "exec": "cdk synth",
        },
      ],
    },
    "synth:silent": {
      "description": "Synthesizes your cdk app into cdk.out and suppresses the template in stdout (part of "yarn build")",
      "name": "synth:silent",
      "steps": [
        {
          "exec": "cdk synth -q",
        },
      ],
    },
    "test": {
      "description": "Run tests",
      "name": "test",
      "steps": [
        {
          "exec": "jest --passWithNoTests --updateSnapshot",
          "receiveArgs": true,
        },
        {
          "spawn": "eslint",
        },
      ],
    },
    "test:watch": {
      "description": "Run jest in watch mode",
      "name": "test:watch",
      "steps": [
        {
          "exec": "jest --watch",
        },
      ],
    },
    "unbump": {
      "description": "Restores version to 0.0.0",
      "env": {
        "BUMPFILE": "dist/version.txt",
        "BUMP_PACKAGE": "commit-and-tag-version@^12",
        "CHANGELOG": "dist/changelog.md",
        "OUTFILE": "package.json",
        "RELEASETAG": "dist/releasetag.txt",
        "RELEASE_TAG_PREFIX": "",
      },
      "name": "unbump",
      "steps": [
        {
          "builtin": "release/reset-version",
        },
      ],
    },
    "upgrade": {
      "description": "upgrade dependencies",
      "env": {
        "CI": "0",
      },
      "name": "upgrade",
      "steps": [
        {
          "exec": "npx npm-check-updates@16 --upgrade --target=minor --peer --dep=dev,peer,prod,optional --filter=@types/jest,deployable-awscdk-app-ts,esbuild,eslint-import-resolver-typescript,eslint-plugin-import,jest,projen,ts-jest,ts-node,typescript",
        },
        {
          "exec": "npm install",
        },
        {
          "exec": "npm update @types/jest @types/node @typescript-eslint/eslint-plugin @typescript-eslint/parser aws-cdk commit-and-tag-version deployable-awscdk-app-ts esbuild eslint-import-resolver-typescript eslint-plugin-import eslint jest jest-junit projen ts-jest ts-node typescript @aws-cdk/core constructs @aws-cdk/assert @aws-cdk/assertions",
        },
        {
          "exec": "npx projen",
        },
        {
          "spawn": "post-upgrade",
        },
      ],
    },
    "watch": {
      "description": "Watches changes in your source code and rebuilds and deploys to the current account",
      "name": "watch",
      "steps": [
        {
          "exec": "cdk deploy --hotswap",
        },
        {
          "exec": "cdk watch",
        },
      ],
    },
  },
}
`;

exports[`assume role with default duration release workflow 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: release
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    outputs:
      latest_commit: \${{ steps.git_remote.outputs.latest_commit }}
      tag_exists: \${{ steps.check_tag_exists.outputs.exists }}
    env:
      CI: "true"
    steps:
      - name: Checkout
        uses: actions/checkout@v4
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name "github-actions"
          git config user.email "github-actions@github.com"
      - name: Install dependencies
        run: npm ci
      - name: release
        run: npx projen release
      - name: Check if version has already been tagged
        id: check_tag_exists
        run: |-
          TAG=$(cat dist/releasetag.txt)
          ([ ! -z "$TAG" ] && git ls-remote -q --exit-code --tags origin $TAG && (echo "exists=true" >> $GITHUB_OUTPUT)) || (echo "exists=false" >> $GITHUB_OUTPUT)
          cat $GITHUB_OUTPUT
      - name: Check for new commits
        id: git_remote
        run: |-
          echo "latest_commit=$(git ls-remote origin -h \${{ github.ref }} | cut -f1)" >> $GITHUB_OUTPUT
          cat $GITHUB_OUTPUT
      - name: Backup artifact permissions
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: cd dist && getfacl -R . > permissions-backup.acl
        continue-on-error: true
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v4.4.0
        with:
          name: build-artifact
          path: dist
          overwrite: true
  release_github:
    name: Publish to GitHub Releases
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: needs.release.outputs.tag_exists != 'true' && needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: 18.x
      - name: Download build artifacts
        uses: actions/download-artifact@v4
        with:
          name: build-artifact
          path: dist
      - name: Restore build artifact permissions
        run: cd dist && setfacl --restore=permissions-backup.acl
        continue-on-error: true
      - name: Release
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
          GITHUB_REPOSITORY: \${{ github.repository }}
          GITHUB_REF: \${{ github.sha }}
        run: errout=$(mktemp); gh release create $(cat dist/releasetag.txt) -R $GITHUB_REPOSITORY -F dist/changelog.md -t $(cat dist/releasetag.txt) --target $GITHUB_REF 2> $errout && true; exitcode=$?; if [ $exitcode -ne 0 ] && ! grep -q "Release.tag_name already exists" $errout; then cat $errout; exit $exitcode; fi
  deploy:
    needs: release_github
    runs-on: ubuntu-latest
    permissions:
      contents: read
      deployments: read
    environment:
      name: \${{ matrix.environment }}
    concurrency: \${{ matrix.environment }}-deploy
    steps:
      - name: Checkout
        uses: actions/checkout@v4
        with:
          ref: \${{ github.sha }}
          fetch-depth: 0
      - name: Install dependencies
        run: npm ci
      - name: Configure AWS Credentials
        if: \${{ matrix.assumeRole == 'false' }}
        env:
          accessKeyId: \${{ secrets[matrix.accessKeyIdSecretName] }}
          secretAccessKey: \${{ secrets[matrix.secretAccessKeySecretName] }}
          region: \${{ matrix.region }}
        run: |-
          echo "AWS_ACCESS_KEY_ID=$accessKeyId" >> $GITHUB_ENV
          echo "AWS_SECRET_ACCESS_KEY=$secretAccessKey" >> $GITHUB_ENV
          echo "AWS_REGION=$region" >> $GITHUB_ENV
      - name: Assume AWS Role
        if: \${{ matrix.assumeRole == 'true' }}
        uses: aws-actions/configure-aws-credentials@v4
        with:
          aws-access-key-id: \${{ secrets[matrix.accessKeyIdSecretName] }}
          aws-secret-access-key: \${{ secrets[matrix.secretAccessKeySecretName] }}
          role-to-assume: \${{ matrix.roleToAssume }}
          aws-region: \${{ matrix.region }}
          role-duration-seconds: \${{ matrix.assumeRoleDurationSeconds }}
      - name: Pre Deployment
        if: \${{ matrix.hasPreDeployTask == 'true' }}
        run: npm run \${{ matrix.preDeploymentScript }}
      - name: Deployment
        run: npm run deploy:workflow
      - name: Post Deployment
        if: \${{ matrix.hasPostDeployTask == 'true' }}
        run: npm run \${{ matrix.postDeploymentScript }}
    strategy:
      max-parallel: 1
      matrix:
        include:
          - environment: dev
            accessKeyIdSecretName: dev-secret-1
            secretAccessKeySecretName: dev-secret-2
            region: dev-aws-region-1
            assumeRole: "true"
            hasPostDeployTask: "false"
            postDeploymentScript: ""
            hasPreDeployTask: "false"
            preDeploymentScript: ""
            roleToAssume: dev-role
            assumeRoleDurationSeconds: 900
        environment:
          - dev
"
`;

exports[`assume role with specified duration release workflow 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: release
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    outputs:
      latest_commit: \${{ steps.git_remote.outputs.latest_commit }}
      tag_exists: \${{ steps.check_tag_exists.outputs.exists }}
    env:
      CI: "true"
    steps:
      - name: Checkout
        uses: actions/checkout@v4
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name "github-actions"
          git config user.email "github-actions@github.com"
      - name: Install dependencies
        run: npm ci
      - name: release
        run: npx projen release
      - name: Check if version has already been tagged
        id: check_tag_exists
        run: |-
          TAG=$(cat dist/releasetag.txt)
          ([ ! -z "$TAG" ] && git ls-remote -q --exit-code --tags origin $TAG && (echo "exists=true" >> $GITHUB_OUTPUT)) || (echo "exists=false" >> $GITHUB_OUTPUT)
          cat $GITHUB_OUTPUT
      - name: Check for new commits
        id: git_remote
        run: |-
          echo "latest_commit=$(git ls-remote origin -h \${{ github.ref }} | cut -f1)" >> $GITHUB_OUTPUT
          cat $GITHUB_OUTPUT
      - name: Backup artifact permissions
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: cd dist && getfacl -R . > permissions-backup.acl
        continue-on-error: true
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v4.4.0
        with:
          name: build-artifact
          path: dist
          overwrite: true
  release_github:
    name: Publish to GitHub Releases
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: needs.release.outputs.tag_exists != 'true' && needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: 18.x
      - name: Download build artifacts
        uses: actions/download-artifact@v4
        with:
          name: build-artifact
          path: dist
      - name: Restore build artifact permissions
        run: cd dist && setfacl --restore=permissions-backup.acl
        continue-on-error: true
      - name: Release
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
          GITHUB_REPOSITORY: \${{ github.repository }}
          GITHUB_REF: \${{ github.sha }}
        run: errout=$(mktemp); gh release create $(cat dist/releasetag.txt) -R $GITHUB_REPOSITORY -F dist/changelog.md -t $(cat dist/releasetag.txt) --target $GITHUB_REF 2> $errout && true; exitcode=$?; if [ $exitcode -ne 0 ] && ! grep -q "Release.tag_name already exists" $errout; then cat $errout; exit $exitcode; fi
  deploy:
    needs: release_github
    runs-on: ubuntu-latest
    permissions:
      contents: read
      deployments: read
    environment:
      name: \${{ matrix.environment }}
    concurrency: \${{ matrix.environment }}-deploy
    steps:
      - name: Checkout
        uses: actions/checkout@v4
        with:
          ref: \${{ github.sha }}
          fetch-depth: 0
      - name: Install dependencies
        run: npm ci
      - name: Configure AWS Credentials
        if: \${{ matrix.assumeRole == 'false' }}
        env:
          accessKeyId: \${{ secrets[matrix.accessKeyIdSecretName] }}
          secretAccessKey: \${{ secrets[matrix.secretAccessKeySecretName] }}
          region: \${{ matrix.region }}
        run: |-
          echo "AWS_ACCESS_KEY_ID=$accessKeyId" >> $GITHUB_ENV
          echo "AWS_SECRET_ACCESS_KEY=$secretAccessKey" >> $GITHUB_ENV
          echo "AWS_REGION=$region" >> $GITHUB_ENV
      - name: Assume AWS Role
        if: \${{ matrix.assumeRole == 'true' }}
        uses: aws-actions/configure-aws-credentials@v4
        with:
          aws-access-key-id: \${{ secrets[matrix.accessKeyIdSecretName] }}
          aws-secret-access-key: \${{ secrets[matrix.secretAccessKeySecretName] }}
          role-to-assume: \${{ matrix.roleToAssume }}
          aws-region: \${{ matrix.region }}
          role-duration-seconds: \${{ matrix.assumeRoleDurationSeconds }}
      - name: Pre Deployment
        if: \${{ matrix.hasPreDeployTask == 'true' }}
        run: npm run \${{ matrix.preDeploymentScript }}
      - name: Deployment
        run: npm run deploy:workflow
      - name: Post Deployment
        if: \${{ matrix.hasPostDeployTask == 'true' }}
        run: npm run \${{ matrix.postDeploymentScript }}
    strategy:
      max-parallel: 1
      matrix:
        include:
          - environment: dev
            accessKeyIdSecretName: dev-secret-1
            secretAccessKeySecretName: dev-secret-2
            region: dev-aws-region-1
            assumeRole: "true"
            hasPostDeployTask: "false"
            postDeploymentScript: ""
            hasPreDeployTask: "false"
            preDeploymentScript: ""
            roleToAssume: dev-role
            assumeRoleDurationSeconds: 1200
        environment:
          - dev
"
`;

exports[`deploy option method is specified tasks 1`] = `
{
  "name": "deploy:workflow",
  "steps": [
    {
      "exec": "cdk deploy --method direct --require-approval never",
    },
  ],
}
`;

exports[`environment added by invoking the addEnvironments release workflow 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: release
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    outputs:
      latest_commit: \${{ steps.git_remote.outputs.latest_commit }}
      tag_exists: \${{ steps.check_tag_exists.outputs.exists }}
    env:
      CI: "true"
    steps:
      - name: Checkout
        uses: actions/checkout@v4
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name "github-actions"
          git config user.email "github-actions@github.com"
      - name: Setup Node.js
        uses: actions/setup-node@v4
        with:
          node-version: 14.18.1
      - name: Install dependencies
        run: npm ci
      - name: release
        run: npx projen release
      - name: Check if version has already been tagged
        id: check_tag_exists
        run: |-
          TAG=$(cat dist/releasetag.txt)
          ([ ! -z "$TAG" ] && git ls-remote -q --exit-code --tags origin $TAG && (echo "exists=true" >> $GITHUB_OUTPUT)) || (echo "exists=false" >> $GITHUB_OUTPUT)
          cat $GITHUB_OUTPUT
      - name: Check for new commits
        id: git_remote
        run: |-
          echo "latest_commit=$(git ls-remote origin -h \${{ github.ref }} | cut -f1)" >> $GITHUB_OUTPUT
          cat $GITHUB_OUTPUT
      - name: Backup artifact permissions
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: cd dist && getfacl -R . > permissions-backup.acl
        continue-on-error: true
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v4.4.0
        with:
          name: build-artifact
          path: dist
          overwrite: true
  release_github:
    name: Publish to GitHub Releases
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: needs.release.outputs.tag_exists != 'true' && needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: 14.18.1
      - name: Download build artifacts
        uses: actions/download-artifact@v4
        with:
          name: build-artifact
          path: dist
      - name: Restore build artifact permissions
        run: cd dist && setfacl --restore=permissions-backup.acl
        continue-on-error: true
      - name: Release
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
          GITHUB_REPOSITORY: \${{ github.repository }}
          GITHUB_REF: \${{ github.sha }}
        run: errout=$(mktemp); gh release create $(cat dist/releasetag.txt) -R $GITHUB_REPOSITORY -F dist/changelog.md -t $(cat dist/releasetag.txt) --target $GITHUB_REF 2> $errout && true; exitcode=$?; if [ $exitcode -ne 0 ] && ! grep -q "Release.tag_name already exists" $errout; then cat $errout; exit $exitcode; fi
  deploy:
    needs: release_github
    runs-on: ubuntu-latest
    permissions:
      contents: read
      deployments: read
    environment:
      name: \${{ matrix.environment }}
    concurrency: \${{ matrix.environment }}-deploy
    steps:
      - name: Checkout
        uses: actions/checkout@v4
        with:
          ref: \${{ github.sha }}
          fetch-depth: 0
      - name: Setup Node.js
        uses: actions/setup-node@v4
        with:
          node-version: 14.18.1
      - name: Install dependencies
        run: npm ci
      - name: Configure AWS Credentials
        if: \${{ matrix.assumeRole == 'false' }}
        env:
          accessKeyId: \${{ secrets[matrix.accessKeyIdSecretName] }}
          secretAccessKey: \${{ secrets[matrix.secretAccessKeySecretName] }}
          region: \${{ matrix.region }}
        run: |-
          echo "AWS_ACCESS_KEY_ID=$accessKeyId" >> $GITHUB_ENV
          echo "AWS_SECRET_ACCESS_KEY=$secretAccessKey" >> $GITHUB_ENV
          echo "AWS_REGION=$region" >> $GITHUB_ENV
      - name: Assume AWS Role
        if: \${{ matrix.assumeRole == 'true' }}
        uses: aws-actions/configure-aws-credentials@v4
        with:
          aws-access-key-id: \${{ secrets[matrix.accessKeyIdSecretName] }}
          aws-secret-access-key: \${{ secrets[matrix.secretAccessKeySecretName] }}
          role-to-assume: \${{ matrix.roleToAssume }}
          aws-region: \${{ matrix.region }}
          role-duration-seconds: \${{ matrix.assumeRoleDurationSeconds }}
      - name: Pre Deployment
        if: \${{ matrix.hasPreDeployTask == 'true' }}
        run: npm run \${{ matrix.preDeploymentScript }}
      - name: Deployment
        run: npm run deploy:workflow
      - name: Post Deployment
        if: \${{ matrix.hasPostDeployTask == 'true' }}
        run: npm run \${{ matrix.postDeploymentScript }}
    strategy:
      max-parallel: 1
      matrix:
        include:
          - environment: dev
            accessKeyIdSecretName: dev-secret-1
            secretAccessKeySecretName: dev-secret-2
            region: dev-aws-region-1
            assumeRole: "false"
            hasPostDeployTask: "false"
            postDeploymentScript: ""
            hasPreDeployTask: "false"
            preDeploymentScript: ""
          - environment: staging
            accessKeyIdSecretName: staging-secret-1
            secretAccessKeySecretName: staging-secret-2
            region: staging-aws-region-1
            assumeRole: "false"
            hasPostDeployTask: "false"
            postDeploymentScript: ""
            hasPreDeployTask: "false"
            preDeploymentScript: ""
        environment:
          - dev
          - staging
"
`;

exports[`node version 18 environmentVariableName release workflow 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: release
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    outputs:
      latest_commit: \${{ steps.git_remote.outputs.latest_commit }}
      tag_exists: \${{ steps.check_tag_exists.outputs.exists }}
    env:
      CI: "true"
    steps:
      - name: Checkout
        uses: actions/checkout@v4
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name "github-actions"
          git config user.email "github-actions@github.com"
      - name: Setup Node.js
        uses: actions/setup-node@v4
        with:
          node-version: "18"
      - name: Install dependencies
        run: npm ci
      - name: release
        run: npx projen release
      - name: Check if version has already been tagged
        id: check_tag_exists
        run: |-
          TAG=$(cat dist/releasetag.txt)
          ([ ! -z "$TAG" ] && git ls-remote -q --exit-code --tags origin $TAG && (echo "exists=true" >> $GITHUB_OUTPUT)) || (echo "exists=false" >> $GITHUB_OUTPUT)
          cat $GITHUB_OUTPUT
      - name: Check for new commits
        id: git_remote
        run: |-
          echo "latest_commit=$(git ls-remote origin -h \${{ github.ref }} | cut -f1)" >> $GITHUB_OUTPUT
          cat $GITHUB_OUTPUT
      - name: Backup artifact permissions
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: cd dist && getfacl -R . > permissions-backup.acl
        continue-on-error: true
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v4.4.0
        with:
          name: build-artifact
          path: dist
          overwrite: true
  release_github:
    name: Publish to GitHub Releases
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: needs.release.outputs.tag_exists != 'true' && needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "18"
      - name: Download build artifacts
        uses: actions/download-artifact@v4
        with:
          name: build-artifact
          path: dist
      - name: Restore build artifact permissions
        run: cd dist && setfacl --restore=permissions-backup.acl
        continue-on-error: true
      - name: Release
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
          GITHUB_REPOSITORY: \${{ github.repository }}
          GITHUB_REF: \${{ github.sha }}
        run: errout=$(mktemp); gh release create $(cat dist/releasetag.txt) -R $GITHUB_REPOSITORY -F dist/changelog.md -t $(cat dist/releasetag.txt) --target $GITHUB_REF 2> $errout && true; exitcode=$?; if [ $exitcode -ne 0 ] && ! grep -q "Release.tag_name already exists" $errout; then cat $errout; exit $exitcode; fi
  deploy:
    needs: release_github
    runs-on: ubuntu-latest
    permissions:
      contents: read
      deployments: read
    environment:
      name: \${{ matrix.environment }}
    concurrency: \${{ matrix.environment }}-deploy
    env:
      STAGE: \${{ matrix.environment }}
    steps:
      - name: Checkout
        uses: actions/checkout@v4
        with:
          ref: \${{ github.sha }}
          fetch-depth: 0
      - name: Setup Node.js
        uses: actions/setup-node@v4
        with:
          node-version: "18"
      - name: Install dependencies
        run: npm ci
      - name: Configure AWS Credentials
        if: \${{ matrix.assumeRole == 'false' }}
        env:
          accessKeyId: \${{ secrets[matrix.accessKeyIdSecretName] }}
          secretAccessKey: \${{ secrets[matrix.secretAccessKeySecretName] }}
          region: \${{ matrix.region }}
        run: |-
          echo "AWS_ACCESS_KEY_ID=$accessKeyId" >> $GITHUB_ENV
          echo "AWS_SECRET_ACCESS_KEY=$secretAccessKey" >> $GITHUB_ENV
          echo "AWS_REGION=$region" >> $GITHUB_ENV
      - name: Assume AWS Role
        if: \${{ matrix.assumeRole == 'true' }}
        uses: aws-actions/configure-aws-credentials@v4
        with:
          aws-access-key-id: \${{ secrets[matrix.accessKeyIdSecretName] }}
          aws-secret-access-key: \${{ secrets[matrix.secretAccessKeySecretName] }}
          role-to-assume: \${{ matrix.roleToAssume }}
          aws-region: \${{ matrix.region }}
          role-duration-seconds: \${{ matrix.assumeRoleDurationSeconds }}
      - name: Pre Deployment
        if: \${{ matrix.hasPreDeployTask == 'true' }}
        run: npm run \${{ matrix.preDeploymentScript }}
      - name: Deployment
        run: npm run deploy:workflow
      - name: Post Deployment
        if: \${{ matrix.hasPostDeployTask == 'true' }}
        run: npm run \${{ matrix.postDeploymentScript }}
    strategy:
      max-parallel: 1
      matrix:
        include:
          - environment: dev1
            accessKeyIdSecretName: AWS_ACCESS_KEY_ID
            secretAccessKeySecretName: AWS_SECRET_ACCESS_KEY
            region: dev-aws-region-1
            assumeRole: "true"
            hasPostDeployTask: "false"
            postDeploymentScript: ""
            hasPreDeployTask: "false"
            preDeploymentScript: ""
            roleToAssume: stub-role-2
            assumeRoleDurationSeconds: 900
        environment:
          - dev1
"
`;

exports[`npm config set for each environments deploy:workflow task should have requiredEnv 1`] = `
{
  "name": "deploy:workflow",
  "requiredEnv": [
    "npm_config_stage",
  ],
  "steps": [
    {
      "exec": "cdk deploy --method change-set --require-approval never",
    },
  ],
}
`;

exports[`npm config set for each environments release workflow 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: release
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    outputs:
      latest_commit: \${{ steps.git_remote.outputs.latest_commit }}
      tag_exists: \${{ steps.check_tag_exists.outputs.exists }}
    env:
      CI: "true"
    steps:
      - name: Checkout
        uses: actions/checkout@v4
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name "github-actions"
          git config user.email "github-actions@github.com"
      - name: Setup Node.js
        uses: actions/setup-node@v4
        with:
          node-version: 14.18.1
      - name: Install dependencies
        run: npm ci
      - name: release
        run: npx projen release
      - name: Check if version has already been tagged
        id: check_tag_exists
        run: |-
          TAG=$(cat dist/releasetag.txt)
          ([ ! -z "$TAG" ] && git ls-remote -q --exit-code --tags origin $TAG && (echo "exists=true" >> $GITHUB_OUTPUT)) || (echo "exists=false" >> $GITHUB_OUTPUT)
          cat $GITHUB_OUTPUT
      - name: Check for new commits
        id: git_remote
        run: |-
          echo "latest_commit=$(git ls-remote origin -h \${{ github.ref }} | cut -f1)" >> $GITHUB_OUTPUT
          cat $GITHUB_OUTPUT
      - name: Backup artifact permissions
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: cd dist && getfacl -R . > permissions-backup.acl
        continue-on-error: true
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v4.4.0
        with:
          name: build-artifact
          path: dist
          overwrite: true
  release_github:
    name: Publish to GitHub Releases
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: needs.release.outputs.tag_exists != 'true' && needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: 14.18.1
      - name: Download build artifacts
        uses: actions/download-artifact@v4
        with:
          name: build-artifact
          path: dist
      - name: Restore build artifact permissions
        run: cd dist && setfacl --restore=permissions-backup.acl
        continue-on-error: true
      - name: Release
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
          GITHUB_REPOSITORY: \${{ github.repository }}
          GITHUB_REF: \${{ github.sha }}
        run: errout=$(mktemp); gh release create $(cat dist/releasetag.txt) -R $GITHUB_REPOSITORY -F dist/changelog.md -t $(cat dist/releasetag.txt) --target $GITHUB_REF 2> $errout && true; exitcode=$?; if [ $exitcode -ne 0 ] && ! grep -q "Release.tag_name already exists" $errout; then cat $errout; exit $exitcode; fi
  deploy:
    needs: release_github
    runs-on: ubuntu-latest
    permissions:
      contents: read
      deployments: read
    environment:
      name: \${{ matrix.environment }}
    concurrency: \${{ matrix.environment }}-deploy
    steps:
      - name: Checkout
        uses: actions/checkout@v4
        with:
          ref: \${{ github.sha }}
          fetch-depth: 0
      - name: Setup Node.js
        uses: actions/setup-node@v4
        with:
          node-version: 14.18.1
      - name: Install dependencies
        run: npm ci
      - name: Configure AWS Credentials
        if: \${{ matrix.assumeRole == 'false' }}
        env:
          accessKeyId: \${{ secrets[matrix.accessKeyIdSecretName] }}
          secretAccessKey: \${{ secrets[matrix.secretAccessKeySecretName] }}
          region: \${{ matrix.region }}
        run: |-
          echo "AWS_ACCESS_KEY_ID=$accessKeyId" >> $GITHUB_ENV
          echo "AWS_SECRET_ACCESS_KEY=$secretAccessKey" >> $GITHUB_ENV
          echo "AWS_REGION=$region" >> $GITHUB_ENV
      - name: Assume AWS Role
        if: \${{ matrix.assumeRole == 'true' }}
        uses: aws-actions/configure-aws-credentials@v4
        with:
          aws-access-key-id: \${{ secrets[matrix.accessKeyIdSecretName] }}
          aws-secret-access-key: \${{ secrets[matrix.secretAccessKeySecretName] }}
          role-to-assume: \${{ matrix.roleToAssume }}
          aws-region: \${{ matrix.region }}
          role-duration-seconds: \${{ matrix.assumeRoleDurationSeconds }}
      - name: Setting NPM Config
        env:
          CONFIG_VALUE: \${{ matrix.environment }}
        run: npm config set stage $CONFIG_VALUE
      - name: Pre Deployment
        if: \${{ matrix.hasPreDeployTask == 'true' }}
        run: npm run \${{ matrix.preDeploymentScript }}
      - name: Deployment
        run: npm run deploy:workflow
      - name: Post Deployment
        if: \${{ matrix.hasPostDeployTask == 'true' }}
        run: npm run \${{ matrix.postDeploymentScript }}
    strategy:
      max-parallel: 1
      matrix:
        include:
          - environment: dev
            accessKeyIdSecretName: dev-secret-1
            secretAccessKeySecretName: dev-secret-2
            region: dev-aws-region-1
            assumeRole: "false"
            hasPostDeployTask: "false"
            postDeploymentScript: ""
            hasPreDeployTask: "false"
            preDeploymentScript: ""
          - environment: staging
            accessKeyIdSecretName: staging-secret-1
            secretAccessKeySecretName: staging-secret-2
            region: staging-aws-region-1
            assumeRole: "false"
            hasPostDeployTask: "false"
            postDeploymentScript: ""
            hasPreDeployTask: "false"
            preDeploymentScript: ""
        environment:
          - dev
          - staging
"
`;

exports[`post deployment added in workflow release workflow 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: release
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    outputs:
      latest_commit: \${{ steps.git_remote.outputs.latest_commit }}
      tag_exists: \${{ steps.check_tag_exists.outputs.exists }}
    env:
      CI: "true"
    steps:
      - name: Checkout
        uses: actions/checkout@v4
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name "github-actions"
          git config user.email "github-actions@github.com"
      - name: Setup Node.js
        uses: actions/setup-node@v4
        with:
          node-version: 14.18.1
      - name: Install dependencies
        run: npm ci
      - name: release
        run: npx projen release
      - name: Check if version has already been tagged
        id: check_tag_exists
        run: |-
          TAG=$(cat dist/releasetag.txt)
          ([ ! -z "$TAG" ] && git ls-remote -q --exit-code --tags origin $TAG && (echo "exists=true" >> $GITHUB_OUTPUT)) || (echo "exists=false" >> $GITHUB_OUTPUT)
          cat $GITHUB_OUTPUT
      - name: Check for new commits
        id: git_remote
        run: |-
          echo "latest_commit=$(git ls-remote origin -h \${{ github.ref }} | cut -f1)" >> $GITHUB_OUTPUT
          cat $GITHUB_OUTPUT
      - name: Backup artifact permissions
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: cd dist && getfacl -R . > permissions-backup.acl
        continue-on-error: true
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v4.4.0
        with:
          name: build-artifact
          path: dist
          overwrite: true
  release_github:
    name: Publish to GitHub Releases
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: needs.release.outputs.tag_exists != 'true' && needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: 14.18.1
      - name: Download build artifacts
        uses: actions/download-artifact@v4
        with:
          name: build-artifact
          path: dist
      - name: Restore build artifact permissions
        run: cd dist && setfacl --restore=permissions-backup.acl
        continue-on-error: true
      - name: Release
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
          GITHUB_REPOSITORY: \${{ github.repository }}
          GITHUB_REF: \${{ github.sha }}
        run: errout=$(mktemp); gh release create $(cat dist/releasetag.txt) -R $GITHUB_REPOSITORY -F dist/changelog.md -t $(cat dist/releasetag.txt) --target $GITHUB_REF 2> $errout && true; exitcode=$?; if [ $exitcode -ne 0 ] && ! grep -q "Release.tag_name already exists" $errout; then cat $errout; exit $exitcode; fi
  deploy:
    needs: release_github
    runs-on: ubuntu-latest
    permissions:
      contents: read
      deployments: read
    environment:
      name: \${{ matrix.environment }}
    concurrency: \${{ matrix.environment }}-deploy
    steps:
      - name: Checkout
        uses: actions/checkout@v4
        with:
          ref: \${{ github.sha }}
          fetch-depth: 0
      - name: Setup Node.js
        uses: actions/setup-node@v4
        with:
          node-version: 14.18.1
      - name: Install dependencies
        run: npm ci
      - name: Configure AWS Credentials
        if: \${{ matrix.assumeRole == 'false' }}
        env:
          accessKeyId: \${{ secrets[matrix.accessKeyIdSecretName] }}
          secretAccessKey: \${{ secrets[matrix.secretAccessKeySecretName] }}
          region: \${{ matrix.region }}
        run: |-
          echo "AWS_ACCESS_KEY_ID=$accessKeyId" >> $GITHUB_ENV
          echo "AWS_SECRET_ACCESS_KEY=$secretAccessKey" >> $GITHUB_ENV
          echo "AWS_REGION=$region" >> $GITHUB_ENV
      - name: Assume AWS Role
        if: \${{ matrix.assumeRole == 'true' }}
        uses: aws-actions/configure-aws-credentials@v4
        with:
          aws-access-key-id: \${{ secrets[matrix.accessKeyIdSecretName] }}
          aws-secret-access-key: \${{ secrets[matrix.secretAccessKeySecretName] }}
          role-to-assume: \${{ matrix.roleToAssume }}
          aws-region: \${{ matrix.region }}
          role-duration-seconds: \${{ matrix.assumeRoleDurationSeconds }}
      - name: Pre Deployment
        if: \${{ matrix.hasPreDeployTask == 'true' }}
        run: npm run \${{ matrix.preDeploymentScript }}
      - name: Deployment
        run: npm run deploy:workflow
      - name: Post Deployment
        if: \${{ matrix.hasPostDeployTask == 'true' }}
        run: npm run \${{ matrix.postDeploymentScript }}
    strategy:
      max-parallel: 1
      matrix:
        include:
          - environment: dev1
            accessKeyIdSecretName: dev-secret-1
            secretAccessKeySecretName: dev-secret-2
            region: dev-aws-region-1
            assumeRole: "false"
            hasPostDeployTask: "true"
            postDeploymentScript: post-deploy
            hasPreDeployTask: "false"
            preDeploymentScript: ""
          - environment: dev2
            accessKeyIdSecretName: dev-secret-3
            secretAccessKeySecretName: dev-secret-4
            region: dev-aws-region-2
            assumeRole: "false"
            hasPostDeployTask: "false"
            postDeploymentScript: ""
            hasPreDeployTask: "false"
            preDeploymentScript: ""
        environment:
          - dev1
          - dev2
"
`;

exports[`pre deployment added in workflow tasks 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: release
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    outputs:
      latest_commit: \${{ steps.git_remote.outputs.latest_commit }}
      tag_exists: \${{ steps.check_tag_exists.outputs.exists }}
    env:
      CI: "true"
    steps:
      - name: Checkout
        uses: actions/checkout@v4
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name "github-actions"
          git config user.email "github-actions@github.com"
      - name: Setup Node.js
        uses: actions/setup-node@v4
        with:
          node-version: 14.18.1
      - name: Install dependencies
        run: npm ci
      - name: release
        run: npx projen release
      - name: Check if version has already been tagged
        id: check_tag_exists
        run: |-
          TAG=$(cat dist/releasetag.txt)
          ([ ! -z "$TAG" ] && git ls-remote -q --exit-code --tags origin $TAG && (echo "exists=true" >> $GITHUB_OUTPUT)) || (echo "exists=false" >> $GITHUB_OUTPUT)
          cat $GITHUB_OUTPUT
      - name: Check for new commits
        id: git_remote
        run: |-
          echo "latest_commit=$(git ls-remote origin -h \${{ github.ref }} | cut -f1)" >> $GITHUB_OUTPUT
          cat $GITHUB_OUTPUT
      - name: Backup artifact permissions
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: cd dist && getfacl -R . > permissions-backup.acl
        continue-on-error: true
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v4.4.0
        with:
          name: build-artifact
          path: dist
          overwrite: true
  release_github:
    name: Publish to GitHub Releases
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: needs.release.outputs.tag_exists != 'true' && needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: 14.18.1
      - name: Download build artifacts
        uses: actions/download-artifact@v4
        with:
          name: build-artifact
          path: dist
      - name: Restore build artifact permissions
        run: cd dist && setfacl --restore=permissions-backup.acl
        continue-on-error: true
      - name: Release
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
          GITHUB_REPOSITORY: \${{ github.repository }}
          GITHUB_REF: \${{ github.sha }}
        run: errout=$(mktemp); gh release create $(cat dist/releasetag.txt) -R $GITHUB_REPOSITORY -F dist/changelog.md -t $(cat dist/releasetag.txt) --target $GITHUB_REF 2> $errout && true; exitcode=$?; if [ $exitcode -ne 0 ] && ! grep -q "Release.tag_name already exists" $errout; then cat $errout; exit $exitcode; fi
  deploy:
    needs: release_github
    runs-on: ubuntu-latest
    permissions:
      contents: read
      deployments: read
    environment:
      name: \${{ matrix.environment }}
    concurrency: \${{ matrix.environment }}-deploy
    steps:
      - name: Checkout
        uses: actions/checkout@v4
        with:
          ref: \${{ github.sha }}
          fetch-depth: 0
      - name: Setup Node.js
        uses: actions/setup-node@v4
        with:
          node-version: 14.18.1
      - name: Install dependencies
        run: npm ci
      - name: Configure AWS Credentials
        if: \${{ matrix.assumeRole == 'false' }}
        env:
          accessKeyId: \${{ secrets[matrix.accessKeyIdSecretName] }}
          secretAccessKey: \${{ secrets[matrix.secretAccessKeySecretName] }}
          region: \${{ matrix.region }}
        run: |-
          echo "AWS_ACCESS_KEY_ID=$accessKeyId" >> $GITHUB_ENV
          echo "AWS_SECRET_ACCESS_KEY=$secretAccessKey" >> $GITHUB_ENV
          echo "AWS_REGION=$region" >> $GITHUB_ENV
      - name: Assume AWS Role
        if: \${{ matrix.assumeRole == 'true' }}
        uses: aws-actions/configure-aws-credentials@v4
        with:
          aws-access-key-id: \${{ secrets[matrix.accessKeyIdSecretName] }}
          aws-secret-access-key: \${{ secrets[matrix.secretAccessKeySecretName] }}
          role-to-assume: \${{ matrix.roleToAssume }}
          aws-region: \${{ matrix.region }}
          role-duration-seconds: \${{ matrix.assumeRoleDurationSeconds }}
      - name: Pre Deployment
        if: \${{ matrix.hasPreDeployTask == 'true' }}
        run: npm run \${{ matrix.preDeploymentScript }}
      - name: Deployment
        run: npm run deploy:workflow
      - name: Post Deployment
        if: \${{ matrix.hasPostDeployTask == 'true' }}
        run: npm run \${{ matrix.postDeploymentScript }}
    strategy:
      max-parallel: 1
      matrix:
        include:
          - environment: dev1
            accessKeyIdSecretName: dev-secret-1
            secretAccessKeySecretName: dev-secret-2
            region: dev-aws-region-1
            assumeRole: "false"
            hasPostDeployTask: "false"
            postDeploymentScript: ""
            hasPreDeployTask: "true"
            preDeploymentScript: pre-deploy
          - environment: dev2
            accessKeyIdSecretName: dev-secret-3
            secretAccessKeySecretName: dev-secret-4
            region: dev-aws-region-2
            assumeRole: "false"
            hasPostDeployTask: "false"
            postDeploymentScript: ""
            hasPreDeployTask: "false"
            preDeploymentScript: ""
        environment:
          - dev1
          - dev2
"
`;

exports[`pre install added in workflow tasks 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: release
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    outputs:
      latest_commit: \${{ steps.git_remote.outputs.latest_commit }}
      tag_exists: \${{ steps.check_tag_exists.outputs.exists }}
    env:
      CI: "true"
    steps:
      - name: Checkout
        uses: actions/checkout@v4
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name "github-actions"
          git config user.email "github-actions@github.com"
      - name: Setup Node.js
        uses: actions/setup-node@v4
        with:
          node-version: 14.18.1
      - name: Install dependencies
        run: npm ci
      - name: release
        run: npx projen release
      - name: Check if version has already been tagged
        id: check_tag_exists
        run: |-
          TAG=$(cat dist/releasetag.txt)
          ([ ! -z "$TAG" ] && git ls-remote -q --exit-code --tags origin $TAG && (echo "exists=true" >> $GITHUB_OUTPUT)) || (echo "exists=false" >> $GITHUB_OUTPUT)
          cat $GITHUB_OUTPUT
      - name: Check for new commits
        id: git_remote
        run: |-
          echo "latest_commit=$(git ls-remote origin -h \${{ github.ref }} | cut -f1)" >> $GITHUB_OUTPUT
          cat $GITHUB_OUTPUT
      - name: Backup artifact permissions
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: cd dist && getfacl -R . > permissions-backup.acl
        continue-on-error: true
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v4.4.0
        with:
          name: build-artifact
          path: dist
          overwrite: true
  release_github:
    name: Publish to GitHub Releases
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: needs.release.outputs.tag_exists != 'true' && needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: 14.18.1
      - name: Download build artifacts
        uses: actions/download-artifact@v4
        with:
          name: build-artifact
          path: dist
      - name: Restore build artifact permissions
        run: cd dist && setfacl --restore=permissions-backup.acl
        continue-on-error: true
      - name: Release
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
          GITHUB_REPOSITORY: \${{ github.repository }}
          GITHUB_REF: \${{ github.sha }}
        run: errout=$(mktemp); gh release create $(cat dist/releasetag.txt) -R $GITHUB_REPOSITORY -F dist/changelog.md -t $(cat dist/releasetag.txt) --target $GITHUB_REF 2> $errout && true; exitcode=$?; if [ $exitcode -ne 0 ] && ! grep -q "Release.tag_name already exists" $errout; then cat $errout; exit $exitcode; fi
  deploy:
    needs: release_github
    runs-on: ubuntu-latest
    permissions:
      contents: read
      deployments: read
    environment:
      name: \${{ matrix.environment }}
    concurrency: \${{ matrix.environment }}-deploy
    steps:
      - name: Checkout
        uses: actions/checkout@v4
        with:
          ref: \${{ github.sha }}
          fetch-depth: 0
      - name: stub-task
        run: npx projen stub-task
      - name: Setup Node.js
        uses: actions/setup-node@v4
        with:
          node-version: 14.18.1
      - name: Install dependencies
        run: npm ci
      - name: Configure AWS Credentials
        if: \${{ matrix.assumeRole == 'false' }}
        env:
          accessKeyId: \${{ secrets[matrix.accessKeyIdSecretName] }}
          secretAccessKey: \${{ secrets[matrix.secretAccessKeySecretName] }}
          region: \${{ matrix.region }}
        run: |-
          echo "AWS_ACCESS_KEY_ID=$accessKeyId" >> $GITHUB_ENV
          echo "AWS_SECRET_ACCESS_KEY=$secretAccessKey" >> $GITHUB_ENV
          echo "AWS_REGION=$region" >> $GITHUB_ENV
      - name: Assume AWS Role
        if: \${{ matrix.assumeRole == 'true' }}
        uses: aws-actions/configure-aws-credentials@v4
        with:
          aws-access-key-id: \${{ secrets[matrix.accessKeyIdSecretName] }}
          aws-secret-access-key: \${{ secrets[matrix.secretAccessKeySecretName] }}
          role-to-assume: \${{ matrix.roleToAssume }}
          aws-region: \${{ matrix.region }}
          role-duration-seconds: \${{ matrix.assumeRoleDurationSeconds }}
      - name: Pre Deployment
        if: \${{ matrix.hasPreDeployTask == 'true' }}
        run: npm run \${{ matrix.preDeploymentScript }}
      - name: Deployment
        run: npm run deploy:workflow
      - name: Post Deployment
        if: \${{ matrix.hasPostDeployTask == 'true' }}
        run: npm run \${{ matrix.postDeploymentScript }}
    strategy:
      max-parallel: 1
      matrix:
        include:
          - environment: dev1
            accessKeyIdSecretName: dev-secret-1
            secretAccessKeySecretName: dev-secret-2
            region: dev-aws-region-1
            assumeRole: "false"
            hasPostDeployTask: "false"
            postDeploymentScript: ""
            hasPreDeployTask: "false"
            preDeploymentScript: ""
        environment:
          - dev1
"
`;

exports[`scoped packages exists release workflow 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: release
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    outputs:
      latest_commit: \${{ steps.git_remote.outputs.latest_commit }}
      tag_exists: \${{ steps.check_tag_exists.outputs.exists }}
    env:
      CI: "true"
    steps:
      - name: Checkout
        uses: actions/checkout@v4
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name "github-actions"
          git config user.email "github-actions@github.com"
      - name: Configure AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          aws-access-key-id: \${{ secrets.AWS_ACCESS_KEY_ID }}
          aws-secret-access-key: \${{ secrets.AWS_SECRET_ACCESS_KEY }}
          aws-region: us-east-2
          role-to-assume: stub-role-1
          role-duration-seconds: 900
      - name: AWS CodeArtifact Login
        run: npm run ca:login
      - name: Install dependencies
        run: npm ci
      - name: release
        run: npx projen release
      - name: Check if version has already been tagged
        id: check_tag_exists
        run: |-
          TAG=$(cat dist/releasetag.txt)
          ([ ! -z "$TAG" ] && git ls-remote -q --exit-code --tags origin $TAG && (echo "exists=true" >> $GITHUB_OUTPUT)) || (echo "exists=false" >> $GITHUB_OUTPUT)
          cat $GITHUB_OUTPUT
      - name: Check for new commits
        id: git_remote
        run: |-
          echo "latest_commit=$(git ls-remote origin -h \${{ github.ref }} | cut -f1)" >> $GITHUB_OUTPUT
          cat $GITHUB_OUTPUT
      - name: Backup artifact permissions
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: cd dist && getfacl -R . > permissions-backup.acl
        continue-on-error: true
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v4.4.0
        with:
          name: build-artifact
          path: dist
          overwrite: true
  release_github:
    name: Publish to GitHub Releases
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: needs.release.outputs.tag_exists != 'true' && needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: 18.x
      - name: Download build artifacts
        uses: actions/download-artifact@v4
        with:
          name: build-artifact
          path: dist
      - name: Restore build artifact permissions
        run: cd dist && setfacl --restore=permissions-backup.acl
        continue-on-error: true
      - name: Release
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
          GITHUB_REPOSITORY: \${{ github.repository }}
          GITHUB_REF: \${{ github.sha }}
        run: errout=$(mktemp); gh release create $(cat dist/releasetag.txt) -R $GITHUB_REPOSITORY -F dist/changelog.md -t $(cat dist/releasetag.txt) --target $GITHUB_REF 2> $errout && true; exitcode=$?; if [ $exitcode -ne 0 ] && ! grep -q "Release.tag_name already exists" $errout; then cat $errout; exit $exitcode; fi
  deploy:
    needs: release_github
    runs-on: ubuntu-latest
    permissions:
      contents: read
      deployments: read
    environment:
      name: \${{ matrix.environment }}
    concurrency: \${{ matrix.environment }}-deploy
    steps:
      - name: Checkout
        uses: actions/checkout@v4
        with:
          ref: \${{ github.sha }}
          fetch-depth: 0
      - name: Configure AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          aws-access-key-id: \${{ secrets.AWS_ACCESS_KEY_ID }}
          aws-secret-access-key: \${{ secrets.AWS_SECRET_ACCESS_KEY }}
          aws-region: us-east-2
          role-to-assume: stub-role-1
          role-duration-seconds: 900
      - name: AWS CodeArtifact Login
        run: npm run ca:login
      - name: Install dependencies
        run: npm ci
      - name: Configure AWS Credentials
        if: \${{ matrix.assumeRole == 'false' }}
        env:
          accessKeyId: \${{ secrets[matrix.accessKeyIdSecretName] }}
          secretAccessKey: \${{ secrets[matrix.secretAccessKeySecretName] }}
          region: \${{ matrix.region }}
        run: |-
          echo "AWS_ACCESS_KEY_ID=$accessKeyId" >> $GITHUB_ENV
          echo "AWS_SECRET_ACCESS_KEY=$secretAccessKey" >> $GITHUB_ENV
          echo "AWS_REGION=$region" >> $GITHUB_ENV
      - name: Assume AWS Role
        if: \${{ matrix.assumeRole == 'true' }}
        uses: aws-actions/configure-aws-credentials@v4
        with:
          aws-access-key-id: \${{ secrets[matrix.accessKeyIdSecretName] }}
          aws-secret-access-key: \${{ secrets[matrix.secretAccessKeySecretName] }}
          role-to-assume: \${{ matrix.roleToAssume }}
          aws-region: \${{ matrix.region }}
          role-duration-seconds: \${{ matrix.assumeRoleDurationSeconds }}
      - name: Pre Deployment
        if: \${{ matrix.hasPreDeployTask == 'true' }}
        run: npm run \${{ matrix.preDeploymentScript }}
      - name: Deployment
        run: npm run deploy:workflow
      - name: Post Deployment
        if: \${{ matrix.hasPostDeployTask == 'true' }}
        run: npm run \${{ matrix.postDeploymentScript }}
    strategy:
      max-parallel: 1
      matrix:
        include:
          - environment: dev1
            accessKeyIdSecretName: AWS_ACCESS_KEY_ID
            secretAccessKeySecretName: AWS_SECRET_ACCESS_KEY
            region: dev-aws-region-1
            assumeRole: "true"
            hasPostDeployTask: "false"
            postDeploymentScript: ""
            hasPreDeployTask: "false"
            preDeploymentScript: ""
            roleToAssume: stub-role-2
            assumeRoleDurationSeconds: 900
        environment:
          - dev1
"
`;

exports[`set the checkActiveDeployment flag release workflow 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: release
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    outputs:
      latest_commit: \${{ steps.git_remote.outputs.latest_commit }}
      tag_exists: \${{ steps.check_tag_exists.outputs.exists }}
    env:
      CI: "true"
    steps:
      - name: Checkout
        uses: actions/checkout@v4
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name "github-actions"
          git config user.email "github-actions@github.com"
      - name: Setup Node.js
        uses: actions/setup-node@v4
        with:
          node-version: 14.18.1
      - name: Install dependencies
        run: npm ci
      - name: release
        run: npx projen release
      - name: Check if version has already been tagged
        id: check_tag_exists
        run: |-
          TAG=$(cat dist/releasetag.txt)
          ([ ! -z "$TAG" ] && git ls-remote -q --exit-code --tags origin $TAG && (echo "exists=true" >> $GITHUB_OUTPUT)) || (echo "exists=false" >> $GITHUB_OUTPUT)
          cat $GITHUB_OUTPUT
      - name: Check for new commits
        id: git_remote
        run: |-
          echo "latest_commit=$(git ls-remote origin -h \${{ github.ref }} | cut -f1)" >> $GITHUB_OUTPUT
          cat $GITHUB_OUTPUT
      - name: Backup artifact permissions
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: cd dist && getfacl -R . > permissions-backup.acl
        continue-on-error: true
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v4.4.0
        with:
          name: build-artifact
          path: dist
          overwrite: true
  release_github:
    name: Publish to GitHub Releases
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: needs.release.outputs.tag_exists != 'true' && needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: 14.18.1
      - name: Download build artifacts
        uses: actions/download-artifact@v4
        with:
          name: build-artifact
          path: dist
      - name: Restore build artifact permissions
        run: cd dist && setfacl --restore=permissions-backup.acl
        continue-on-error: true
      - name: Release
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
          GITHUB_REPOSITORY: \${{ github.repository }}
          GITHUB_REF: \${{ github.sha }}
        run: errout=$(mktemp); gh release create $(cat dist/releasetag.txt) -R $GITHUB_REPOSITORY -F dist/changelog.md -t $(cat dist/releasetag.txt) --target $GITHUB_REF 2> $errout && true; exitcode=$?; if [ $exitcode -ne 0 ] && ! grep -q "Release.tag_name already exists" $errout; then cat $errout; exit $exitcode; fi
  deploy:
    needs: release_github
    runs-on: ubuntu-latest
    permissions:
      contents: read
      deployments: read
    environment:
      name: \${{ matrix.environment }}
    concurrency: \${{ matrix.environment }}-deploy
    steps:
      - name: Checkout
        uses: actions/checkout@v4
        with:
          ref: \${{ github.sha }}
          fetch-depth: 0
      - name: Setup Node.js
        uses: actions/setup-node@v4
        with:
          node-version: 14.18.1
      - name: Install dependencies
        run: npm ci
      - id: deployment-check
        uses: AminFazlMondo/check-deployed-environment@v1
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        with:
          environment: \${{ matrix.environment }}
      - name: Configure AWS Credentials
        if: \${{ matrix.assumeRole == 'false' && steps.deployment-check.outputs.has_active_deployment != 'true' }}
        env:
          accessKeyId: \${{ secrets[matrix.accessKeyIdSecretName] }}
          secretAccessKey: \${{ secrets[matrix.secretAccessKeySecretName] }}
          region: \${{ matrix.region }}
        run: |-
          echo "AWS_ACCESS_KEY_ID=$accessKeyId" >> $GITHUB_ENV
          echo "AWS_SECRET_ACCESS_KEY=$secretAccessKey" >> $GITHUB_ENV
          echo "AWS_REGION=$region" >> $GITHUB_ENV
      - name: Assume AWS Role
        if: \${{ matrix.assumeRole == 'true' && steps.deployment-check.outputs.has_active_deployment != 'true' }}
        uses: aws-actions/configure-aws-credentials@v4
        with:
          aws-access-key-id: \${{ secrets[matrix.accessKeyIdSecretName] }}
          aws-secret-access-key: \${{ secrets[matrix.secretAccessKeySecretName] }}
          role-to-assume: \${{ matrix.roleToAssume }}
          aws-region: \${{ matrix.region }}
          role-duration-seconds: \${{ matrix.assumeRoleDurationSeconds }}
      - name: Pre Deployment
        if: \${{ matrix.hasPreDeployTask == 'true' && steps.deployment-check.outputs.has_active_deployment != 'true' }}
        run: npm run \${{ matrix.preDeploymentScript }}
      - name: Deployment
        if: \${{ steps.deployment-check.outputs.has_active_deployment != 'true' }}
        run: npm run deploy:workflow
      - name: Post Deployment
        if: \${{ matrix.hasPostDeployTask == 'true' && steps.deployment-check.outputs.has_active_deployment != 'true' }}
        run: npm run \${{ matrix.postDeploymentScript }}
    strategy:
      max-parallel: 1
      matrix:
        include:
          - environment: dev
            accessKeyIdSecretName: dev-secret-1
            secretAccessKeySecretName: dev-secret-2
            region: dev-aws-region-1
            assumeRole: "false"
            hasPostDeployTask: "false"
            postDeploymentScript: ""
            hasPreDeployTask: "false"
            preDeploymentScript: ""
        environment:
          - dev
"
`;

exports[`specific stack release workflow 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: release
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    outputs:
      latest_commit: \${{ steps.git_remote.outputs.latest_commit }}
      tag_exists: \${{ steps.check_tag_exists.outputs.exists }}
    env:
      CI: "true"
    steps:
      - name: Checkout
        uses: actions/checkout@v4
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name "github-actions"
          git config user.email "github-actions@github.com"
      - name: Install dependencies
        run: npm ci
      - name: release
        run: npx projen release
      - name: Check if version has already been tagged
        id: check_tag_exists
        run: |-
          TAG=$(cat dist/releasetag.txt)
          ([ ! -z "$TAG" ] && git ls-remote -q --exit-code --tags origin $TAG && (echo "exists=true" >> $GITHUB_OUTPUT)) || (echo "exists=false" >> $GITHUB_OUTPUT)
          cat $GITHUB_OUTPUT
      - name: Check for new commits
        id: git_remote
        run: |-
          echo "latest_commit=$(git ls-remote origin -h \${{ github.ref }} | cut -f1)" >> $GITHUB_OUTPUT
          cat $GITHUB_OUTPUT
      - name: Backup artifact permissions
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: cd dist && getfacl -R . > permissions-backup.acl
        continue-on-error: true
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v4.4.0
        with:
          name: build-artifact
          path: dist
          overwrite: true
  release_github:
    name: Publish to GitHub Releases
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: needs.release.outputs.tag_exists != 'true' && needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: 18.x
      - name: Download build artifacts
        uses: actions/download-artifact@v4
        with:
          name: build-artifact
          path: dist
      - name: Restore build artifact permissions
        run: cd dist && setfacl --restore=permissions-backup.acl
        continue-on-error: true
      - name: Release
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
          GITHUB_REPOSITORY: \${{ github.repository }}
          GITHUB_REF: \${{ github.sha }}
        run: errout=$(mktemp); gh release create $(cat dist/releasetag.txt) -R $GITHUB_REPOSITORY -F dist/changelog.md -t $(cat dist/releasetag.txt) --target $GITHUB_REF 2> $errout && true; exitcode=$?; if [ $exitcode -ne 0 ] && ! grep -q "Release.tag_name already exists" $errout; then cat $errout; exit $exitcode; fi
  deploy:
    needs: release_github
    runs-on: ubuntu-latest
    permissions:
      contents: read
      deployments: read
    environment:
      name: \${{ matrix.environment }}
    concurrency: \${{ matrix.environment }}-deploy
    steps:
      - name: Checkout
        uses: actions/checkout@v4
        with:
          ref: \${{ github.sha }}
          fetch-depth: 0
      - name: Install dependencies
        run: npm ci
      - name: Configure AWS Credentials
        if: \${{ matrix.assumeRole == 'false' }}
        env:
          accessKeyId: \${{ secrets[matrix.accessKeyIdSecretName] }}
          secretAccessKey: \${{ secrets[matrix.secretAccessKeySecretName] }}
          region: \${{ matrix.region }}
        run: |-
          echo "AWS_ACCESS_KEY_ID=$accessKeyId" >> $GITHUB_ENV
          echo "AWS_SECRET_ACCESS_KEY=$secretAccessKey" >> $GITHUB_ENV
          echo "AWS_REGION=$region" >> $GITHUB_ENV
      - name: Assume AWS Role
        if: \${{ matrix.assumeRole == 'true' }}
        uses: aws-actions/configure-aws-credentials@v4
        with:
          aws-access-key-id: \${{ secrets[matrix.accessKeyIdSecretName] }}
          aws-secret-access-key: \${{ secrets[matrix.secretAccessKeySecretName] }}
          role-to-assume: \${{ matrix.roleToAssume }}
          aws-region: \${{ matrix.region }}
          role-duration-seconds: \${{ matrix.assumeRoleDurationSeconds }}
      - name: Pre Deployment
        if: \${{ matrix.hasPreDeployTask == 'true' }}
        run: npm run \${{ matrix.preDeploymentScript }}
      - name: Deployment
        run: npm run deploy:workflow
      - name: Post Deployment
        if: \${{ matrix.hasPostDeployTask == 'true' }}
        run: npm run \${{ matrix.postDeploymentScript }}
    strategy:
      max-parallel: 1
      matrix:
        include:
          - environment: dev
            accessKeyIdSecretName: dev-secret-1
            secretAccessKeySecretName: dev-secret-2
            region: dev-aws-region-1
            assumeRole: "false"
            hasPostDeployTask: "false"
            postDeploymentScript: ""
            hasPreDeployTask: "false"
            preDeploymentScript: ""
        environment:
          - dev
"
`;

exports[`specific stack tasks 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "env": {
    "PATH": "$(npx -c "node --print process.env.PATH")",
  },
  "tasks": {
    "build": {
      "description": "Full release build",
      "name": "build",
      "steps": [
        {
          "spawn": "default",
        },
        {
          "spawn": "pre-compile",
        },
        {
          "spawn": "compile",
        },
        {
          "spawn": "post-compile",
        },
        {
          "spawn": "test",
        },
        {
          "spawn": "package",
        },
      ],
    },
    "bump": {
      "condition": "git log --oneline -1 | grep -qv "chore(release):"",
      "description": "Bumps version based on latest git tag and generates a changelog entry",
      "env": {
        "BUMPFILE": "dist/version.txt",
        "BUMP_PACKAGE": "commit-and-tag-version@^12",
        "CHANGELOG": "dist/changelog.md",
        "OUTFILE": "package.json",
        "RELEASETAG": "dist/releasetag.txt",
        "RELEASE_TAG_PREFIX": "",
      },
      "name": "bump",
      "steps": [
        {
          "builtin": "release/bump-version",
        },
      ],
    },
    "bundle": {
      "description": "Prepare assets",
      "name": "bundle",
    },
    "clobber": {
      "condition": "git diff --exit-code > /dev/null",
      "description": "hard resets to HEAD of origin and cleans the local repo",
      "env": {
        "BRANCH": "$(git branch --show-current)",
      },
      "name": "clobber",
      "steps": [
        {
          "exec": "git checkout -b scratch",
          "name": "save current HEAD in "scratch" branch",
        },
        {
          "exec": "git checkout $BRANCH",
        },
        {
          "exec": "git fetch origin",
          "name": "fetch latest changes from origin",
        },
        {
          "exec": "git reset --hard origin/$BRANCH",
          "name": "hard reset to origin commit",
        },
        {
          "exec": "git clean -fdx",
          "name": "clean all untracked files",
        },
        {
          "say": "ready to rock! (unpushed commits are under the "scratch" branch)",
        },
      ],
    },
    "compile": {
      "description": "Only compile",
      "name": "compile",
    },
    "default": {
      "description": "Synthesize project files",
      "name": "default",
      "steps": [
        {
          "exec": "node .projenrc.js",
        },
      ],
    },
    "deploy": {
      "description": "Deploys your CDK app to the AWS cloud",
      "name": "deploy",
      "steps": [
        {
          "exec": "cdk deploy",
          "receiveArgs": true,
        },
      ],
    },
    "deploy:hotswap": {
      "name": "deploy:hotswap",
      "steps": [
        {
          "exec": "cdk deploy myStack --method change-set --require-approval never --hotswap",
        },
      ],
    },
    "deploy:workflow": {
      "name": "deploy:workflow",
      "steps": [
        {
          "exec": "cdk deploy myStack --method change-set --require-approval never",
        },
      ],
    },
    "destroy": {
      "description": "Destroys your cdk app in the AWS cloud",
      "name": "destroy",
      "steps": [
        {
          "exec": "cdk destroy",
          "receiveArgs": true,
        },
      ],
    },
    "diff": {
      "description": "Diffs the currently deployed app against your code",
      "name": "diff",
      "steps": [
        {
          "exec": "cdk diff",
        },
      ],
    },
    "eject": {
      "description": "Remove projen from the project",
      "env": {
        "PROJEN_EJECTING": "true",
      },
      "name": "eject",
      "steps": [
        {
          "spawn": "default",
        },
      ],
    },
    "eslint": {
      "description": "Runs eslint against the codebase",
      "name": "eslint",
      "steps": [
        {
          "exec": "eslint --ext .ts,.tsx --fix --no-error-on-unmatched-pattern $@ src test build-tools .projenrc.js",
          "receiveArgs": true,
        },
      ],
    },
    "install": {
      "description": "Install project dependencies and update lockfile (non-frozen)",
      "name": "install",
      "steps": [
        {
          "exec": "npm install",
        },
      ],
    },
    "install:ci": {
      "description": "Install project dependencies using frozen lockfile",
      "name": "install:ci",
      "steps": [
        {
          "exec": "npm ci",
        },
      ],
    },
    "package": {
      "description": "Creates the distribution package",
      "name": "package",
    },
    "post-compile": {
      "description": "Runs after successful compilation",
      "name": "post-compile",
      "steps": [
        {
          "spawn": "synth:silent",
        },
      ],
    },
    "post-upgrade": {
      "description": "Runs after upgrading dependencies",
      "name": "post-upgrade",
    },
    "pre-compile": {
      "description": "Prepare the project for compilation",
      "name": "pre-compile",
    },
    "release": {
      "description": "Prepare a release from "main" branch",
      "env": {
        "RELEASE": "true",
      },
      "name": "release",
      "steps": [
        {
          "exec": "rm -fr dist",
        },
        {
          "spawn": "bump",
        },
        {
          "spawn": "build",
        },
        {
          "spawn": "unbump",
        },
        {
          "exec": "git diff --ignore-space-at-eol --exit-code",
        },
      ],
    },
    "synth": {
      "description": "Synthesizes your cdk app into cdk.out",
      "name": "synth",
      "steps": [
        {
          "exec": "cdk synth",
        },
      ],
    },
    "synth:silent": {
      "description": "Synthesizes your cdk app into cdk.out and suppresses the template in stdout (part of "yarn build")",
      "name": "synth:silent",
      "steps": [
        {
          "exec": "cdk synth -q",
        },
      ],
    },
    "test": {
      "description": "Run tests",
      "name": "test",
      "steps": [
        {
          "exec": "jest --passWithNoTests --updateSnapshot",
          "receiveArgs": true,
        },
        {
          "spawn": "eslint",
        },
      ],
    },
    "test:watch": {
      "description": "Run jest in watch mode",
      "name": "test:watch",
      "steps": [
        {
          "exec": "jest --watch",
        },
      ],
    },
    "unbump": {
      "description": "Restores version to 0.0.0",
      "env": {
        "BUMPFILE": "dist/version.txt",
        "BUMP_PACKAGE": "commit-and-tag-version@^12",
        "CHANGELOG": "dist/changelog.md",
        "OUTFILE": "package.json",
        "RELEASETAG": "dist/releasetag.txt",
        "RELEASE_TAG_PREFIX": "",
      },
      "name": "unbump",
      "steps": [
        {
          "builtin": "release/reset-version",
        },
      ],
    },
    "upgrade": {
      "description": "upgrade dependencies",
      "env": {
        "CI": "0",
      },
      "name": "upgrade",
      "steps": [
        {
          "exec": "npx npm-check-updates@16 --upgrade --target=minor --peer --dep=dev,peer,prod,optional --filter=@types/jest,deployable-awscdk-app-ts,esbuild,eslint-import-resolver-typescript,eslint-plugin-import,jest,projen,ts-jest,ts-node,typescript",
        },
        {
          "exec": "npm install",
        },
        {
          "exec": "npm update @types/jest @types/node @typescript-eslint/eslint-plugin @typescript-eslint/parser aws-cdk commit-and-tag-version deployable-awscdk-app-ts esbuild eslint-import-resolver-typescript eslint-plugin-import eslint jest jest-junit projen ts-jest ts-node typescript @aws-cdk/core constructs @aws-cdk/assert @aws-cdk/assertions",
        },
        {
          "exec": "npx projen",
        },
        {
          "spawn": "post-upgrade",
        },
      ],
    },
    "watch": {
      "description": "Watches changes in your source code and rebuilds and deploys to the current account",
      "name": "watch",
      "steps": [
        {
          "exec": "cdk deploy --hotswap",
        },
        {
          "exec": "cdk watch",
        },
      ],
    },
  },
}
`;

exports[`update pre/post deploy scripts should update scripts for pre/post deploy for selected environments 1`] = `
{
  "environment": [
    "dev",
    "staging",
    "prod",
  ],
  "include": [
    {
      "accessKeyIdSecretName": "dev-secret-1",
      "assumeRole": "false",
      "environment": "dev",
      "hasPostDeployTask": "true",
      "hasPreDeployTask": "false",
      "postDeploymentScript": "post:deploy",
      "preDeploymentScript": "",
      "region": "dev-aws-region-1",
      "secretAccessKeySecretName": "dev-secret-2",
    },
    {
      "accessKeyIdSecretName": "staging-secret-1",
      "assumeRole": "false",
      "environment": "staging",
      "hasPostDeployTask": "true",
      "hasPreDeployTask": "true",
      "postDeploymentScript": "post:deploy",
      "preDeploymentScript": "pre:deploy",
      "region": "staging-aws-region-1",
      "secretAccessKeySecretName": "staging-secret-2",
    },
    {
      "accessKeyIdSecretName": "prod-secret-1",
      "assumeRole": "false",
      "environment": "prod",
      "hasPostDeployTask": "false",
      "hasPreDeployTask": "true",
      "postDeploymentScript": "",
      "preDeploymentScript": "pre:deploy",
      "region": "prod-aws-region-1",
      "secretAccessKeySecretName": "prod-secret-2",
    },
  ],
}
`;
